fix: adjust line-height for improved text readability in contact section

--- a/src/app/contact-me/contact-me.component.scss
+++ b/src/app/contact-me/contact-me.component.scss
@@ -29,7 +29,7 @@
           font-weight: 700;
           font-size: 64px;
           color: rgba(61, 207, 182, 1);
-          line-height: 0.8;
+          line-height: 0.9;
           margin: 0;
           margin-bottom: 24px;
         }
